Fix titles in the case study navigation. Fix the component view on mobile devices with long titles

--- a/styles/CaseStudy.module.sass
+++ b/styles/CaseStudy.module.sass
@@ -48,6 +48,16 @@
   position: relative
   margin-left: -$margin-standard
   margin-bottom: -$margin-standard
+
+.caseStudy__navigation_high
+  height: 4 * $margin-standard
+  justify-content: center
+  & > *:first-child
+    left: auto
+    top: $margin-standard
+  & > *:last-child
+    right: auto
+    bottom: $margin-standard
   
 .caseStudy__navigation_arrow
   position: absolute
