--- a/styles/Menu.module.sass
+++ b/styles/Menu.module.sass
@@ -49,7 +49,7 @@
   transition-delay: .5s
 
 .menu__background_opened
-  width: 512px
+  width: 680px
   transition-delay: 0s
 
 // ----------NAVIGATION---------- //
